# SDL_SideScroller

src/: Makefile  Makefile.am  Makefile.in  main.c  main.c~  sdl_testproj
src/.deps/: main.Po
